[tool.poetry]
name = "quiet"
version = "0.1.0"
description = ""
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pathvalidate = "^3.3.1"
zstandard = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
